hotfix: unmodifiableList에 대한 수정 시도로 인한 에러 수정